fix(svelte): Adjust some spacing for headings/footings

--- a/svelte-app/src/app.scss
+++ b/svelte-app/src/app.scss
@@ -26,6 +26,12 @@ img {
   box-sizing: border-box;
 }
 
+a,
+a:-webkit-any-link {
+  color: inherit;
+  text-decoration: none;
+}
+
 body {
   background-color: #0f172a;
   --textColour: #f1f5f9;
@@ -35,25 +41,21 @@ body {
     --textColour: #0f172a;
   }
   &:not(.is-loaded) {
-    cursor: wait !important;
+    &,
     &:not(.app-loaded) {
       cursor: wait !important;
     }
   }
   &.is-loading,
-  &.is-loading div {
-    cursor: wait !important;
+  &.is-loading {
+    cursor: progress !important;
+
+    & a,
+    & button,
+    & [role='button'] {
+      cursor: wait !important;
+    }
   }
-  // &.is-loading a,
-  // &.is-loading button,
-  // &.is-loading [role='button'] {
-  //   &,
-  //   & a,
-  //   & button,
-  //   & [role='button'] {
-  //     cursor: not-allowed !important;
-  //   }
-  // }
   &.custom-cursor {
     &,
     &.is-loading,
@@ -67,10 +69,7 @@ body {
   }
 }
 
-.not-allowed,
-.not-allowed a,
-.not-allowed button,
-.not-allowed [role='button'] {
+.not-allowed {
   &,
   & a,
   & button,
